<?xml version="1.0" encoding="UTF-8"?>
<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
    <device id="retina6_1" orientation="portrait" appearance="dark"/>
    <dependencies>
        <deployment identifier="iOS"/>
        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
        <capability name="Named colors" minToolsVersion="9.0"/>
        <capability name="Safe area layout guides" minToolsVersion="9.0"/>
        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
    </dependencies>
    <scenes>
        <!--Movie Quiz View Controller-->
        <scene sceneID="tne-QT-ifu">
            <objects>
                <viewController id="BYZ-38-t0r" customClass="MovieQuizViewController" customModule="MovieQuiz" customModuleProvider="target" sceneMemberID="viewController">
                    <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                        <subviews>
                            <stackView opaque="NO" contentMode="top" axis="vertical" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="vuS-wl-18B">
                                <rect key="frame" x="20" y="58" width="374" height="742.5"/>
                                <subviews>
                                    <stackView opaque="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="LKX-Oz-3mk">
                                        <rect key="frame" x="0.0" y="0.0" width="374" height="20.5"/>
                                        <subviews>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" verticalHuggingPriority="251" text="Вопрос:" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="wEe-Ac-9kW" userLabel="Question Title Label">
                                                <rect key="frame" x="0.0" y="0.0" width="344" height="20.5"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <color key="textColor" name="YP White"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="252" verticalHuggingPriority="251" text="1/10" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="fiA-0D-IFF" userLabel="Index Label">
                                                <rect key="frame" x="344" y="0.0" width="30" height="20.5"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Index"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                                <color key="textColor" name="YP White"/>
                                                <nil key="highlightedColor"/>
                                            </label>
                                        </subviews>
                                    </stackView>
                                    <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="Mdn-ST-Sba" userLabel="Preview Image">
                                        <rect key="frame" x="0.0" y="40.5" width="374" height="561"/>
                                        <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                        <accessibility key="accessibilityConfiguration" identifier="Poster"/>
                                        <constraints>
                                            <constraint firstAttribute="width" secondItem="Mdn-ST-Sba" secondAttribute="height" multiplier="2:3" id="b44-Np-Ula"/>
                                        </constraints>
                                    </imageView>
                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" preservesSuperviewLayoutMargins="YES" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontForContentSizeCategory="YES" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="KdD-rk-cIg" userLabel="Question Label">
                                        <rect key="frame" x="0.0" y="621.5" width="374" height="41"/>
                                        <string key="text">Рейтинг этого фильма
меньше, чем 5?</string>
                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                        <color key="textColor" name="YP White"/>
                                        <nil key="highlightedColor"/>
                                    </label>
                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="20" translatesAutoresizingMaskIntoConstraints="NO" id="eVD-XP-kMc">
                                        <rect key="frame" x="0.0" y="682.5" width="374" height="60"/>
                                        <subviews>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="eKT-vc-OS5" userLabel="No Button">
                                                <rect key="frame" x="0.0" y="0.0" width="177" height="60"/>
                                                <color key="backgroundColor" name="YP White"/>
                                                <accessibility key="accessibilityConfiguration" identifier="No"/>
                                                <constraints>
                                                    <constraint firstAttribute="height" constant="60" id="D9w-XQ-Uvq"/>
                                                </constraints>
                                                <fontDescription key="fontDescription" type="system" pointSize="19"/>
                                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="Нет">
                                                    <color key="titleColor" name="YP Black"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="15"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="noButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="CKp-il-l6d"/>
                                                </connections>
                                            </button>
                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="u2e-9h-Fld" userLabel="Yes Button">
                                                <rect key="frame" x="197" y="0.0" width="177" height="60"/>
                                                <color key="backgroundColor" name="YP White"/>
                                                <accessibility key="accessibilityConfiguration" identifier="Yes"/>
                                                <fontDescription key="fontDescription" type="system" pointSize="20"/>
                                                <color key="tintColor" white="0.0" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
                                                <inset key="imageEdgeInsets" minX="0.0" minY="0.0" maxX="2.2250738585072014e-308" maxY="0.0"/>
                                                <state key="normal" title="Да">
                                                    <color key="titleColor" name="YP Black"/>
                                                </state>
                                                <userDefinedRuntimeAttributes>
                                                    <userDefinedRuntimeAttribute type="number" keyPath="layer.cornerRadius">
                                                        <integer key="value" value="15"/>
                                                    </userDefinedRuntimeAttribute>
                                                </userDefinedRuntimeAttributes>
                                                <connections>
                                                    <action selector="yesButtonClicked:" destination="BYZ-38-t0r" eventType="touchUpInside" id="gH9-Bk-CH5"/>
                                                </connections>
                                            </button>
                                        </subviews>
                                        <constraints>
                                            <constraint firstItem="u2e-9h-Fld" firstAttribute="height" secondItem="eKT-vc-OS5" secondAttribute="height" id="H17-bk-wkY"/>
                                            <constraint firstItem="u2e-9h-Fld" firstAttribute="width" secondItem="eKT-vc-OS5" secondAttribute="width" id="uIm-5i-g7N"/>
                                        </constraints>
                                    </stackView>
                                </subviews>
                            </stackView>
                            <activityIndicatorView opaque="NO" contentMode="scaleToFill" horizontalHuggingPriority="750" verticalHuggingPriority="750" style="medium" translatesAutoresizingMaskIntoConstraints="NO" id="V5r-UW-tIt">
                                <rect key="frame" x="197" y="438" width="20" height="20"/>
                            </activityIndicatorView>
                        </subviews>
                        <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                        <color key="backgroundColor" name="YP Black"/>
                        <constraints>
                            <constraint firstItem="V5r-UW-tIt" firstAttribute="centerY" secondItem="8bC-Xf-vdC" secondAttribute="centerY" id="EpL-3p-8IA"/>
                            <constraint firstItem="V5r-UW-tIt" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="elI-Cm-xBB"/>
                            <constraint firstItem="vuS-wl-18B" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="10" id="f1N-AV-z0b"/>
                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="vuS-wl-18B" secondAttribute="trailing" constant="20" id="q53-PH-flT"/>
                            <constraint firstItem="vuS-wl-18B" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="wHp-gv-cJe"/>
                        </constraints>
                    </view>
                    <connections>
                        <outlet property="activityIndicator" destination="V5r-UW-tIt" id="usv-A9-92s"/>
                        <outlet property="counterLabel" destination="fiA-0D-IFF" id="9eF-M5-AHH"/>
                        <outlet property="imageView" destination="Mdn-ST-Sba" id="zgS-D6-bxn"/>
                        <outlet property="noButton" destination="eKT-vc-OS5" id="Go0-W8-JvH"/>
                        <outlet property="questionTitle" destination="wEe-Ac-9kW" id="6YN-Fy-lWL"/>
                        <outlet property="textLabel" destination="KdD-rk-cIg" id="eR4-lp-dxY"/>
                        <outlet property="yesButton" destination="u2e-9h-Fld" id="TpF-Oe-8X0"/>
                    </connections>
                </viewController>
                <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
            </objects>
            <point key="canvasLocation" x="-55.072463768115945" y="55.580357142857139"/>
        </scene>
    </scenes>
    <resources>
        <namedColor name="YP Black">
            <color red="0.10199999809265137" green="0.10599999874830246" blue="0.13300000131130219" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
        <namedColor name="YP White">
            <color red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
        </namedColor>
    </resources>
</document>
